fix comment spacing

--- a/app/public/css/app.css
+++ b/app/public/css/app.css
@@ -24,3 +24,7 @@ main.container {
 .center {
   margin-left: 85px;
 }
+
+.commentFix {
+  margin-left: 30px;
+}
